# elastix_reg

./: CMakeLists.txt  elastix_parameters.txt  main.cpp
